--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,19 +47,22 @@ extra:
 
 pages:
     - Home: index.md
-    - Native Setup:
+    - How to setup on different platforms:
       - Ubuntu 16.04 x86-64: native_setup/ubuntu_x86_build.md
       - Raspberry PI - Raspbian: native_setup/rpi_raspbian.md
-    - Virtual machine setup:
-      - VPN based setup: virtual_machine_setup/dynamic_ip.md
-      - Static IP setup: virtual_machine_setup/static_ip.md
-    - General SCION configuration:
+      - Virtual machine with VPN: virtual_machine_setup/dynamic_ip.md
+      - Virtual machine with public IP: virtual_machine_setup/static_ip.md
       - Verifying installation: general_scion_configuration/verifying_scion_installation.md
+    - How to connect:
+      - Running SCION on local topology: general_scion_configuration/local_top.md
+      - Set up an AS and connect to SCION network: general_scion_configuration/vpn_setup.md
+      - Set up an endhost and connect to local AS: general_scion_configuration/vpn_setup.md
       - VPN configuration: general_scion_configuration/vpn_setup.md
-      - Running on local topology: general_scion_configuration/local_top.md
-      - Configuring path selection: general_scion_configuration/influence_path_selection.md
-      - Configuring SCION IP gateway: general_scion_configuration/setup_sig.md
-    - Sample projects:
+
+    - How to use:
+      - Visualization tool (SCION-viz): general_scion_configuration/scion_viz.md
       - Read temperature sensor over SCION network: sample_projects/fetch_temperature.md
       - Access video camera over SCION network: sample_projects/access_camera.md
-      - Using multipath in SCION: sample_projects/multipath.md
+      - Using multipath in SCION: sample_projects/multipath.md      
+      - Configuring path selection: general_scion_configuration/influence_path_selection.md
+      - Configuring SCION IP gateway: general_scion_configuration/setup_sig.md
