--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,7 +49,7 @@ pages:
     - Home: index.md
     - How to setup on different platforms:
       - Ubuntu 16.04 x86-64: native_setup/ubuntu_x86_build.md
-      - Raspberry PI &ndash; Raspbian: native_setup/rpi_raspbian.md
+      - Raspberry PI &ndash; Ubuntu: native_setup/rpi_ubuntu.md
       - Virtual machine via VPN: virtual_machine_setup/dynamic_ip.md
       - Virtual machine with static public IP: virtual_machine_setup/static_ip.md
       - Verifying the installation: general_scion_configuration/verifying_scion_installation.md
