--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,17 +47,20 @@ extra:
 
 pages:
     - Home: index.md
-    - How to setup on different platforms:
-      - Ubuntu 16.04 x86-64: native_setup/ubuntu_x86_build.md
-      - Raspberry PI &ndash; Ubuntu: native_setup/rpi_ubuntu.md
-      - Virtual machine via VPN: virtual_machine_setup/dynamic_ip.md
+
+    - How to run SCION VM:
+      - Virtual machine with VPN: virtual_machine_setup/dynamic_ip.md
       - Virtual machine with static public IP: virtual_machine_setup/static_ip.md
-      - Verifying the installation: general_scion_configuration/verifying_scion_installation.md
-    - How to connect:
+
+    - How to install SCION manually on different platforms:
+      - Ubuntu 16.04 x86-64: native_setup/ubuntu_x86_build.md
+      - Ubuntu MATE Raspberry PI: native_setup/rpi_ubuntu.md
+
+    - Connecting to SCION:
       - Running SCION on a local topology: general_scion_configuration/local_top.md
       - Set up an AS and connect to the SCION network: general_scion_configuration/public_ip.md
-      - Connect to the SCION network via VPN: general_scion_configuration/vpn_setup.md
-      - Set up an endhost and connect to a local AS: general_scion_configuration/vpn_setup.md
+      - Set up an AS and connect to the SCION network via VPN: general_scion_configuration/vpn_setup.md
+      - Set up SCION endhost and connect to local AS: general_scion_configuration/setup_endhost.md
 
     - How to use:
       - Read a temperature sensor over the SCION network: sample_projects/fetch_temperature.md
@@ -72,5 +75,6 @@ pages:
       - Command-line AS Visualization: as_visualization/command_asviz.md
 
     - Scion tricks:
+      - Verifying the installation: general_scion_configuration/verifying_scion_installation.md
       - Updating gen directory: scion_tricks/changing_gen_dir.md
       - Updating SCION: scion_tricks/updating_scion.md
