--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ pages:
     - Connecting to SCION:
       - Running SCION on a local topology: general_scion_configuration/local_top.md
       - Set up an AS and connect to the SCION network: general_scion_configuration/public_ip.md
+      - Set up an AS and connect to the SCION network behind a NAT: general_scion_configuration/public_ip_nat.md
       - Set up an AS and connect to the SCION network via VPN: general_scion_configuration/vpn_setup.md
       - Set up SCION endhost and connect to local AS: general_scion_configuration/setup_endhost.md
 
