Added wireshark plugin tutorial

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ pages:
       - Verifying the installation: general_scion_configuration/verifying_scion_installation.md
       - Updating gen directory: scion_tricks/changing_gen_dir.md
       - Updating SCION: scion_tricks/updating_scion.md
+      - Adding Wireshark dissector: scion_tricks/wireshark.md
 
     - SCIONLab:
       - SCION box first steps: scionlab/scionlab.md
