--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,7 @@ pages:
     - How to install SCION manually on different platforms:
       - Ubuntu 16.04 x86-64: native_setup/ubuntu_x86_build.md
       - Ubuntu MATE Raspberry PI: native_setup/rpi_ubuntu.md
+      - Android devices: native_setup/android.md
 
     - Connecting to SCION:
       - Running SCION on a local topology: general_scion_configuration/local_top.md
