--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,7 @@ nav:
       - Read a temperature sensor over the SCION network: sample_projects/fetch_sensor_readings.md
       - Access a video camera over the SCION network: sample_projects/access_camera.md
       - Bandwidth tester application: sample_projects/bwtester.md
+      - SCIONLab Apps Web Visualization: as_visualization/webapp.md
       - Running AS Visualizations: as_visualization/running_asviz.md
       - Browser AS Visualization: as_visualization/browser_asviz.md
       - Command-line AS Visualization: as_visualization/command_asviz.md
