--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
 
     - SCION tips and tricks:
       - Verifying the installation: general_scion_configuration/verifying_scion_installation.md
+      - Troubleshooting: general_scion_configuration/troubleshooting.md
       - Running SCION on system boot: scion_tricks/setup_startup.md
       - Updating gen directory: scion_tricks/changing_gen_dir.md
       - Updating SCION: scion_tricks/updating_scion.md
