--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ nav:
       - apps/bat.md
       - Webapp:
         - Overview: as_visualization/webapp.md
-        - Visualisation for Apps: as_visualization/webapp_apps.md
+        - Visualization for Apps: as_visualization/webapp_apps.md
         - Webapp Development Tips: as_visualization/webapp_development.md
       - apps/remote_sig.md
       - apps/rains.md
