setting a default layout for all files is a bad idea

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ remote_theme: pmarsceill/just-the-docs
 
 # === defaults ===
 defaults:
-  - scope: {path: ""}
+  - scope: {path: "content"}
     values:
       layout: default
 
