--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,12 @@ remote_theme: pmarsceill/just-the-docs
 logo: /assets/favicon.ico
 logo_title: SCIONLab
 
+# === markdown options ===
+
+markdown: kramdown
+kramdown:
+  toc_levels: 1..3
+
 # === defaults ===
 defaults:
   - scope: {path: "content"}
