move favicon.ico to root

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ footer_content: 'Copyright &copy 2019, Network Security Group, ETH Zurich'
 
 # === visuals ===
 remote_theme: pmarsceill/just-the-docs
-logo: /assets/favicon.ico
+logo: /favicon.ico
 logo_title: SCIONLab
 
 # === markdown options ===
