--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ aux_links:
   "Our GitHub":
     - "https://github.com/netsec-ethz/"
 footer_content: 'Copyright &copy 2019, Network Security Group, ETH Zurich'
+url: https://docs.scionlab.org/
 
 # === visuals ===
 remote_theme: pmarsceill/just-the-docs
