Fix just-the-docs customizations
Update to the customizations to new mechanism introduced in
just-the-docs v0.2.9.
C.f. https://github.com/pmarsceill/just-the-docs/pull/186.

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ url: https://docs.scionlab.org
 remote_theme: pmarsceill/just-the-docs
 logo: /favicon.ico
 logo_title: SCIONLab
+color_scheme: scionlab  # makes just-the-docs load theme from _sass/color_schemes/scionlab.scss
 
 # === markdown options ===
 markdown: kramdown
