--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,10 @@ footer_content: "Copyright &copy; 2020, Network Security Group, ETH Zurich"
 url: https://docs.scionlab.org
 
 # === visuals ===
-remote_theme: pmarsceill/just-the-docs
+remote_theme: pmarsceill/just-the-docs@v0.3.1-r
 logo: /favicon.ico
 logo_title: SCIONLab
+color_scheme: scionlab  # makes just-the-docs load theme from _sass/color_schemes/scionlab.scss
 
 # === markdown options ===
 markdown: kramdown
